--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ base64           = { version = "0.13", default-features = false }
 tokio-util       = "0.6"
 crc32c           = "0.6"
 filetime         = "0.2"
+regex            = "1.5.4"
 
 [dev-dependencies]
 tokio        = { version = "1.12", default-features = false, features = ["full"] }
